--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<script src="index.js"></script>
+Edit the code in "code-to-run.js" and look in the terminal!
+
+<script src="code-to-run.js"></script>
