--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-Edit the code in "code-to-run.js" and look in the terminal!
+Edit the code in "code-to-run.js" and look in the console!
 
 <script src="code-to-run.js"></script>
