--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Innovation Module P1</title>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/two.js/0.6.0/two.min.js"
       integrity="sha256-0qJ0at+6aIXSqYEgj85J5ufSt6+IdiairAk4+OBJLMU="
