--- a/index.html
+++ b/index.html
@@ -10,14 +10,31 @@
       integrity="sha256-0qJ0at+6aIXSqYEgj85J5ufSt6+IdiairAk4+OBJLMU="
       crossorigin="anonymous"
     ></script>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: sans-serif;
+        padding: 20px;
+      }
+      svg {
+        margin: 15px;
+      }
+      input {
+        height: 30px;
+        font-size: 15px;
+        border-radius: 3px;
+        border: 1px solid gray;
+      }
+    </style>
   </head>
   <body>
     Edit the code in "code-to-run.js" and see te results here and in the
     console!
-    <div id="draw"></div>
+    <div id="paper"></div>
+    <input type="text" placeholder="Write here" id="input"></input>
     <script>
-      let draw = new Two({ width: 285, height: 200 }).appendTo(
-        document.getElementById("draw")
+      let Paper = new Two({ width: 200, height: 200 }).appendTo(
+        document.getElementById("paper")
       );
     </script>
     <script src="code-to-run.js"></script>
