--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         height: 30px;
         font-size: 15px;
         border-radius: 3px;
-        border: 1px solid gray;
+        border: 1px solid lightgray;
       }
     </style>
   </head>
